style.css
body {
  background-color: white;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 6rem;
  border-bottom: 1px solid black;
  z-index: 100;
}

.sticky-nav {
  position: fixed;
  top: 0px;
  background-color: rgb(255, 255, 255, 0.9);
}

.block.first {
  margin-top: 10rem;
  margin-bottom: 20rem;
}

.logo {
  margin-left: 10rem;
  height: 5rem;
  width: 13rem;
}

.nav-letter {
  font-family: "Josefin Sans", sans-serif;
  font-size: 1rem;
  font-weight: 200;
  font-style: normal;
}

.nav__items {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  margin-right: 10rem;
}

.nav__item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 4rem;
}

.a__svg {
  text-decoration: none;
  color: black;
}

object {
  pointer-events: none;
}

.nav__svg {
  height: 2rem;
  margin-bottom: 0.5rem;
}

.nav__link {
  text-decoration: none;
  color: black;
}

.main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.first {
  margin-top: 1rem;
}

#name {
  font-family: "Prata", serif;
  font-size: 2.5rem;
  font-weight: 600;
  font-style: normal;
}

.first img {
  height: 15em;
  width: 15em;
  border-radius: 5%;
}

.block {
  text-align: center;
  width: 50%;
}

#section--1 {
  border-top: 1px solid black;
  margin-bottom: 10rem;
}

#section--2 {
  border-top: 1px solid black;
  margin-bottom: 5rem;
}

#section--3 {
  border-top: 1px solid black;
  margin-bottom: 5rem;
}

#section--4 {
  border-top: 1px solid black;
}

.section {
  background-color: white;
  padding: 10rem 3rem;
  transition: transform 1s, opacity 1s;
}

.section--hidden {
  opacity: 0;
  transform: translateY(8rem);
}

.block-title {
  font-family: "Josefin Sans", sans-serif;
  font-size: 2.5rem;
  font-weight: 300;
  font-style: normal;
  color: black;
  text-decoration: underline;
  text-decoration-thickness: 2px;
}

.block-text {
  font-family: "Lato", sans-serif;
  font-size: 18px;
  font-weight: 300;
  font-style: normal;
}

.education {
  display: flex;
  text-align: center;
  margin-bottom: 100px;
}

#mindera-img {
  height: 500px;
  width: 650px;
  margin-right: 50px;
  border-radius: 5%;
}

#warmup-img {
  margin-left: 120px;
  height: 250px;
  width: 500px;
  border-radius: 5%;
}

#iscac-img {
  height: 400px;
  width: 350px;
  margin-right: 50px;
  border-radius: 5%;
}

#list-p {
  text-align: center;
}

.list {
  text-align: left;
}

h3 {
  text-align: center;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 20px;
}

.list p {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
}

.list ul {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
}

.second-edu {
  flex-direction: row-reverse;
}

.second-edu p {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
}

.date {
  text-align: center;
  font-family: "Lato", sans-serif;
}

.experience {
  display: flex;
  flex-direction: column;
}

.exp-block {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
  margin-bottom: 50px;
}

.skills {
  display: flex;
  flex-direction: column;
  margin-bottom: 70px;
}

.skills-paragraph {
  text-align: center;
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
}

footer {
  display: flex;
  flex-direction: column;
  text-align: center;
  width: 100%;
}

small {
  margin-bottom: 2rem;
}

.icons {
  font-size: 24px;
  margin-right: 4px;
}

#footer-links {
  font-family: "Lato", sans-serif;
  margin-top: 25px;
  margin-bottom: 25px;
}

#footer-links a {
  text-decoration: none;
  color: black;
  margin-right: 10px;
}

#about-links {
  font-family: "Lato", sans-serif;
  margin-top: 5rem;
}

#about-links a {
  text-decoration: none;
  font-size: 1.2rem;
  color: black;
  margin-right: 5rem;
}

.fa-instagram {
  color: #f55353;
}

.fa-linkedin-square {
  color: rgb(0, 64, 255);
}

@media (max-width: 680px) {
  .nav {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 6rem;
    border-bottom: 1px solid black;
    z-index: 100;
  }

  .nav img {
    display: none;
  }

  .nav__items {
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    margin-right: 6rem;
  }

  .nav__item {
    margin-left: 3rem;
  }

  .first img {
    height: 9em;
    width: 9em;
  }

  .block-text {
    text-align: justify;
    font-size: 12px;
  }

  p {
    text-align: justify;
    font-size: 12px;
    font-weight: 300;
    font-style: normal;
  }

  #about-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  #about-links a {
    font-size: 0.8rem;
    margin-bottom: 1.5rem;
    margin-right: 0;
  }

  #name {
    font-size: 25px;
  }

  .block-title {
    font-size: 25px;
  }

  h3 {
    font-size: 14px;
  }

  .list p {
    font-size: 12px;
    font-weight: 300;
    font-style: normal;
  }

  .date {
    text-align: justify;
    font-size: 12px;
  }

  ul {
    text-align: justify;
    font-size: 12px;
    font-weight: 300;
    font-style: normal;
  }

  li {
    text-align: justify;
    font-size: 12px;
    font-weight: 300;
    font-style: normal;
  }

  .education {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
  }

  #mindera-img {
    height: 250px;
    width: 200px;
    margin-right: 0px;
  }

  #warmup-img {
    height: 150px;
    width: 200px;
    margin-left: 0px;
  }

  #iscac-img {
    height: 250px;
    width: 200px;
    margin-right: 0px;
  }

  #list-p {
    text-align: justify;
  }

  .exp-block {
    margin-bottom: 25px;
  }

  .exp-block a {
    font-size: 12px;
  }

  .warmup-media p {
    font-weight: 300;
    font-style: normal;
    text-align: justify;
    font-size: 12px;
  }

  .skills-paragraph {
    text-align: justify;
    font-size: 12px;
    font-weight: 300;
    font-style: normal;
  }

  .skills {
    margin-bottom: 35px;
  }

  #footer-links {
    font-size: 10px;
  }

  small {
    font-size: 10px;
  }
}

@media (min-width: 681px) and (max-width: 1280px) {
  .first img {
    height: 12em;
    width: 12em;
  }

  #about-links a {
    font-size: 1rem;
    margin-right: 2rem;
  }

  .block-text {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  p {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  #name {
    font-size: 35px;
  }

  .block-title {
    font-size: 40px;
  }

  h3 {
    font-size: 16px;
  }

  .list p {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  .date {
    font-size: 14px;
  }

  ul {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  li {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  .warmup-media p {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  #mindera-img {
    margin-top: 15%;
    height: 350px;
    width: 250px;
  }

  #warmup-img {
    height: 150px;
    width: 250px;
  }

  #iscac-img {
    height: 300px;
    width: 250px;
  }

  .exp-block a {
    font-size: 12px;
  }

  .skills-paragraph {
    font-size: 14px;
    font-weight: 300;
    font-style: normal;
  }

  footer {
    font-size: 14px;
  }

  small {
    font-size: 12px;
  }
}

